@@ -178,9 +178,31 @@ views_apply_cfg(struct views* vs, struct config_file* cfg)
 				 * configured as type transparent */
 				for(nd = cv->local_zones_nodefault; nd;
 					nd = nd->next) {
-					cfg_str2list_insert(&lz_cfg.local_zones,
-						strdup(nd->str),
-						strdup("nodefault"));
+					char* nd_str, *nd_type;
+					nd_str = strdup(nd->str);
+					if(!nd_str) {
+						log_err("out of memory");
+						lock_rw_unlock(&v->lock);
+						return 0;
+					}
+					nd_type = strdup("nodefault");
+					if(!nd_type) {
+						log_err("out of memory");
+						free(nd_str);
+						lock_rw_unlock(&v->lock);
+						return 0;
+					}
+					if(!cfg_str2list_insert(
+						&lz_cfg.local_zones, nd_str,
+						nd_type)) {
+						log_err("failed to insert "
+							"default zones into "
+							"local-zone list");
+						free(nd_str);
+						free(nd_type);
+						lock_rw_unlock(&v->lock);
+						return 0;
+					}
 				}
 			}
 			if(!local_zones_apply_cfg(v->local_zones, &lz_cfg)){
